<resources>
    <string name="app_name">Ultimate Word Finder</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_return">Return</string>
    <string name="title_activity_game_setup">Ultimate Word Finder</string>
    <string name="title_activity_scoring_table">Players and Scoring</string>
    <string name="title_activity_word_finder">Word Finder</string>

    <string name="game_setup_text_button_add_player">Add</string>
    <string name="game_setup_button_remove_player">Remove</string>
    <string name="game_setup_button_clear_list">Clear</string>
    <string name="game_setup_button_start_game">Start Game</string>

    <string name="scoring_table_button_scores">Scores</string>
    <string name="scoring_table_button_tile_breakdown">Tile Breakdown</string>
    <string name="scoring_table_button_word_finder">Word Finder</string>

    <string name="word_finder_button_example">Example</string>
    <string name="word_finder_advanced_search">Advanced Search</string>
    <string name="word_finder_button_search">Search</string>
    <string name="word_finder_text_letters_on_board">Letters on Board (? for gaps)</string>
    <string name="word_finder_text_letters_in_rack">Letters in Rack (Leave blank to search for all possible words)</string>

    <string name="advanced_search_text_contains">Contains</string>
    <string name="advanced_search_text_starts_with">Starts With</string>
    <string name="advanced_search_text_ends_with">Ends With</string>
    <string name="advanced_search_word_length_minimum">Number of Letters (minimum, 0 for any)</string>
    <string name="advanced_search_word_length_maximum">Number of Letters(maximum, 0 for any)</string>
    <string name="advanced_search_button_apply">Apply Filter</string>

    <string name="word_finder_checkbox_official_only">Official Words Only</string>
    <string name="word_finder_results_button_minimum_word_score">Min. Word Score</string>
    <string name="word_finder_results_button_compare_scores">Compare Scores</string>
    <string name="word_finder_results_switch_smart_selection">Smart Selection</string>

    <string name="word_finder_score_comparison_button_compare">Compare</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="bottom_nav_bar_text_player">Players</string>
    <string name="bottom_nav_bar_text_scores">Scores</string>
    <string name="bottom_nav_bar_text_tile_breakdown">Tiles</string>
    <string name="bottom_nav_bar_text_word_finder">Word Finder</string>
    <string name="bottom_nav_bar_text_dictionary">Dictionary</string>

    <string name="add_words_input_hint_text">Word(s)</string>
    <string name="add_manual_score_button_text">Add Number Score</string>
    <string name="add_word_score_button_text">Add Word Score</string>

    <string name="add_player_edit_text_hint">Player Name</string>
    <string name="add_player_add_text">Add Player</string>
    <string name="add_player_choose_colour_text">Choose Colour</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_word_details_tabbed">WordDetailsTabbedActivity</string>
    <string name="tab_text_1">Definitions</string>
    <string name="tab_text_2">Synonyms</string>

    <string name="no_definitions">No definitions found</string>
    <string name="no_synonyms">No synonyms found</string>

    <string name="credits_activity_text">Some icons in this app designed by Freepik, Dave Gandy, Google, and SimpleIcon</string>
    <string name="about_app_text">This app is a free and open-source app for Android, licensed under GPL-2.0.\n\n
                                    You can use this app to:\n\n

                                    - Track scores in word games\n
                                    - Solve anagrams\n
                                    - Find words using patterns\n
                                    - Filter results using filters, including contains, starts with, ends with, and minimum/maximum word length\n
                                    - Compare the base scores of word (based on the scores of letter tiles in Scrabble)\n
                                    - View word details including pronunciation, parts of speech, definitions, and synonyms\n\n

        Note: The word details screen requires an active internet connection. Everything else will work fully offline.</string>
</resources>
